--- a/.github/workflows/create-draft-pr.yml
+++ b/.github/workflows/create-draft-pr.yml
@@ -5,15 +5,20 @@ on:
     types: [assigned]
 
 jobs:
-  create-draft-pr:
+  create_draft_pr:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: Create a new branch
+      - name: Set up Git user
         run: |
-          ISSUE_NUMBER=${{ github.event.issue.number }}
+          git config --global user.email "deolube@github.com"
+          git config --global user.name "DeoluBe"
+
+      - name: Create placeholder commit
+        run: |
+          ISSUE_NUMBER=7
           BRANCH_NAME="issue-${ISSUE_NUMBER}"
           git checkout -b $BRANCH_NAME
           echo "Placeholder commit for issue #${ISSUE_NUMBER}" > placeholder.txt
@@ -29,3 +34,5 @@ jobs:
           title: "Draft PR for issue #${{ github.event.issue.number }}"
           body: "This is a draft pull request for issue #${{ github.event.issue.number }}."
           draft: true
+
+         
